# alpha-signal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/: CODEOWNERS
alpha_signal/: Dockerfile  README.md  __init__.py  pyproject.toml
alpha_signal/alpha_signal/cache/: sqlite.py
alpha_signal/alpha_signal/extractors/: anthropic.py  base.py  gemini.py  local.py  openai.py  parse_json.py
alpha_signal/cache/: base.py  sqlite.py
alpha_signal/extractors/: __init__.py  anthropic.py  base.py  gemini.py  local.py  openai.py
alpha_signal/models/: __init__.py  extractions.py
alpha_signal/monitoring/: costs.py
alpha_signal/services/: extraction.py  ingestion.py
alpha_signal/sources/: arxiv.py  base.py  europe_pmc.py  openalex.py  semantic_scholar.py  springer.py
alpha_signal/workflows/: extract.py  ingest.py  pipeline.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  cache.py  serializers.py
backend/app/api/: __init__.py  articles.py  extractions.py  health.py  jobs.py
backend/app/executor/: __init__.py  base.py  cli.py
backend/app/jobs/: __init__.py  runner.py  store.py
frontend/: Dockerfile  README.md  index.html
frontend/src/: App.css  App.jsx  api.js  index.css
notebooks/ingest/: 20260302-single-day-test.ipynb
tests/: conftest.py
tests/integration/: test_sources_live.py
tests/unit/: test_anthropic_extractor.py  test_arxiv.py  test_europe_pmc.py  test_extraction_schema.py  test_extraction_service.py  test_ingestion_service.py  test_local_extractor.py  test_openai_extractor.py  test_openalex.py  test_semantic_scholar.py  test_sqlite_cache.py
(+54 files in other folders)
