[tool.poetry]
name = "alpha-signal-platform-backend"
version = "0.1.0"
description = "Flask API serving Alpha Signal articles and extractions"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
alpha-signal = { path = "../alpha_signal", develop = true }
flask = ">=3.0.0"
flask-cors = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
